Fix overflow while loading in landing

--- a/dev/app/components/landing/landing.scss
+++ b/dev/app/components/landing/landing.scss
@@ -13,10 +13,13 @@
     width: 100vw;
     height: 100vh;
     overflow-x: hidden;
-    overflow-y: auto;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+
+    &.scrollable {
+        overflow-y: auto;
+    }
     
     .login-page
     {
