--- a/dev/app/style.scss
+++ b/dev/app/style.scss
@@ -3,7 +3,6 @@ body {
 
     .general-loader {
         background: #213250;
-        z-index: 10000000000000;
 	}
 
 	.main-loader {
